@@ -1644,9 +1644,9 @@ SetVelocityComponents (
 #endif
 	}
 	else if (pMS->delta_item == 0
-			|| (HIBYTE (pMS->delta_item) 
-			&& ((CurrentInputState.key[PlayerOne][KEY_ESCAPE] ||
-			     CurrentInputState.key[PlayerOne][KEY_SPECIAL])
+			|| (HIBYTE (pMS->delta_item)
+			&& ((CurrentInputState.key[PlayerControls[0]][KEY_ESCAPE] ||
+			     CurrentInputState.key[PlayerControls[0]][KEY_SPECIAL])
 			|| ((PLANETSIDE_DESC*)pMenuState->ModuleFrame)->InTransit)))
 	{
 		if (pMS->delta_item || pMS->CurState > EXPLOSION_LIFE + 60)
@@ -1707,9 +1707,10 @@ SetVelocityComponents (
 			index = GetFrameIndex (LanderFrame[0]);
 			if (LONIBBLE (pMS->CurState))
 				pMS->CurState -= MAKE_BYTE (1, 0);
-			else if (CurrentInputState.key[PlayerOne][KEY_LEFT] || CurrentInputState.key[PlayerOne][KEY_RIGHT])
+			else if (CurrentInputState.key[PlayerControls[0]][KEY_LEFT] ||
+					CurrentInputState.key[PlayerControls[0]][KEY_RIGHT])
 			{
-				if (CurrentInputState.key[PlayerOne][KEY_LEFT])
+				if (CurrentInputState.key[PlayerControls[0]][KEY_LEFT])
 				{
 					dx = -1;
 					--index;
@@ -1749,7 +1750,7 @@ SetVelocityComponents (
 						);
 			}
 
-			if (!CurrentInputState.key[PlayerOne][KEY_UP])
+			if (!CurrentInputState.key[PlayerControls[0]][KEY_UP])
 				dx = dy = 0;
 			else
 				GetNextVelocityComponents (
@@ -1758,7 +1759,7 @@ SetVelocityComponents (
 
 			if (HINIBBLE (pMS->CurState))
 				pMS->CurState -= MAKE_BYTE (0, 1);
-			else if (CurrentInputState.key[PlayerOne][KEY_WEAPON])
+			else if (CurrentInputState.key[PlayerControls[0]][KEY_WEAPON])
 			{
 				HELEMENT hWeaponElement;
 
@@ -1787,7 +1788,7 @@ SetVelocityComponents (
 							index + ANGLE_TO_FACING (FULL_CIRCLE)
 							);
 
-					if (!CurrentInputState.key[PlayerOne][KEY_UP])
+					if (!CurrentInputState.key[PlayerControls[0]][KEY_UP])
 						wdx = wdy = 0;
 					else
 						GetCurrentVelocityComponents (
